# ai-windsurf

./: .gitignore  docker-compose.yml  example.env  main.py  openapi.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: bag_recommendations.py  chat.py
app/core/: config.py
app/models/: bag_recommendations.py  chat.py
app/schemas/: bag_recommendations.py  chat.py
app/services/: bag_recommendation_service.py  chat_service.py
scenarios/: bag_satisfaction.json
