[project]
name = "ai-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "openai==1.3.5",
    "pydantic==2.4.2",
    "python-dotenv==1.0.0",
    "requests>=2.32.3",
    "uvicorn==0.24.0",
]
